All stuff, pics, desc, anim

--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="background"></div>
+    <div id="emoji-background"></div>
 
     <section id="section1" class="active">
-        <img src="assets/images/placeholder.png" alt="Circular Image" class="circular-image">
-        <h1>Happy Birthday!</h1>
-        <button class="next-btn">Next</button>
+        <h1>HAAAAPPY BIRTHDAYYYY! 💚</h1>
+      <img src="assets/images/cat1.jpg" alt="Circular Image" class="circular-image">
+        <h1>Click nextt</h1>
+        <button class="next-btn">Neext</button>
     </section>
 
     <section id="section2">
+        <h1>Some Old Memories Of Us 💤</h1>
         <div class="image-grid">
-            <img src="assets/images/placeholder.png" alt="Image 1">
-            <img src="assets/images/placeholder.png" alt="Image 2">
-            <img src="assets/images/placeholder.png" alt="Image 3">
-            <img src="assets/images/placeholder.png" alt="Image 4">
-            <img src="assets/images/placeholder.png" alt="Image 5">
-            <img src="assets/images/placeholder.png" alt="Image 6">
+            <img src="assets/images/mem1.png" alt="Image 1">
+            <img src="assets/images/mem2.png" alt="Image 2">
+            <img src="assets/images/mem3.png" alt="Image 3">
+            <img src="assets/images/mem4.png" alt="Image 4">
+            <img src="assets/images/mem5.png" alt="Image 5">
+            <img src="assets/images/mem6.png" alt="Image 6">
         </div>
         <button class="next-btn">Next</button>
     </section>
@@ -36,12 +38,12 @@
     </section>
 
     <section id="section4">
-        <h2>I have a letter for you...</h2>
+        <h2>I have a letter for you, but first..</h2>
         <button class="next-btn">Read It</button>
     </section>
 
     <section id="section5">
-        <img src="assets/images/placeholder.png" alt="Image before question" class="question-image">
+        <img src="assets/images/cat2.jpg" alt="Image before question" class="question-image">
         <h2>Do you love me?</h2>
         <button id="yes-btn">Yes</button>
         <button id="no-btn">No</button>
@@ -52,6 +54,7 @@
     </section>
 
     <section id="section6">
+        <h1>Happy Birthdaaay! 💚</h1>
         <div class="letter">
             <p>My Dearest,</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -66,6 +69,11 @@
         <h2>Thank You!</h2>
         <button id="rewatch-btn">Rewatch</button>
     </section>
+
+    <div class="image-lightbox" id="imageLightbox">
+      <span class="close-btn" id="closeLightbox">&times;</span>
+      <img id="lightboxImage" src="" alt="Expanded view">
+    </div>
 
     <script src="main.js"></script>
 </body>
