--- a/index.html
+++ b/index.html
@@ -4,75 +4,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday!</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- BACKGROUND -->
     <div id="emoji-background"></div>
 
+    <!-- SECTION 1 -->
     <section id="section1" class="active">
-        <h1>HAAAAPPY BIRTHDAYYYY! 💚</h1>
-      <img src="assets/images/cat1.jpg" alt="Circular Image" class="circular-image">
-        <h1>Click nextt</h1>
-        <button class="next-btn">Neext</button>
+        <div class="layout">
+            <h1>HAAAAPPY BIRTHDAYYYY! 💚</h1>
+            <img src="assets/images/cat1.jpg" alt="Circular Image" class="circular-image">
+            <h1>Click nextt</h1>
+            <button class="next-btn">Neext</button>
+        </div>
     </section>
 
+    <!-- SECTION 2 -->
     <section id="section2">
-        <h1>Some Old Memories Of Us 💤</h1>
-        <div class="image-grid">
-            <img src="assets/images/mem1.png" alt="Image 1">
-            <img src="assets/images/mem2.png" alt="Image 2">
-            <img src="assets/images/mem3.png" alt="Image 3">
-            <img src="assets/images/mem4.png" alt="Image 4">
-            <img src="assets/images/mem5.png" alt="Image 5">
-            <img src="assets/images/mem6.png" alt="Image 6">
+        <div class="layout">
+            <h1>Some Old Memories Of Us 💤</h1>
+            <div class="image-grid">
+                <img src="assets/images/mem1.png" alt="Image 1">
+                <img src="assets/images/mem2.png" alt="Image 2">
+                <img src="assets/images/mem3.png" alt="Image 3">
+                <img src="assets/images/mem4.png" alt="Image 4">
+                <img src="assets/images/mem5.png" alt="Image 5">
+                <img src="assets/images/mem6.png" alt="Image 6">
+            </div>
+            <button class="next-btn">Next</button>
         </div>
-        <button class="next-btn">Next</button>
     </section>
 
+    <!-- SECTION 3 -->
     <section id="section3">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <button class="next-btn">Next</button>
-    </section>
-
-    <section id="section4">
-        <h2>I have a letter for you, but first..</h2>
-        <button class="next-btn">Read It</button>
-    </section>
-
-    <section id="section5">
-        <img src="assets/images/cat2.jpg" alt="Image before question" class="question-image">
-        <h2>Do you love me?</h2>
-        <button id="yes-btn">Yes</button>
-        <button id="no-btn">No</button>
-    </section>
-
-    <section id="section-no">
-        <h2>awh.. lets try again..</h2>
-    </section>
-
-    <section id="section6">
-        <h1>Happy Birthdaaay! 💚</h1>
-        <div class="letter">
-            <p>My Dearest,</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>With all my love,</p>
-            <p>Someone Special</p>
+        <div class="layout">
+            <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+            <button class="next-btn">Next</button>
         </div>
-        <button class="next-btn">Next</button>
     </section>
 
+    <!-- SECTION 4 -->
+    <section id="section4">
+        <div class="layout">
+            <h2>I have a letter for you, but first..</h2>
+            <button class="next-btn">Read It</button>
+        </div>
+    </section>
+
+    <!-- SECTION 5 -->
+    <section id="section5">
+        <div class="layout">
+            <img src="assets/images/cat2.jpg" alt="Image before question" class="question-image">
+            <h2>Do you love me?</h2>
+            <button id="yes-btn">Yes</button>
+            <button id="no-btn">No</button>
+        </div>
+    </section>
+
+    <!-- NO SECTION -->
+    <section id="section-no">
+        <div class="layout">
+            <h2>awh.. lets try again..</h2>
+        </div>
+    </section>
+
+    <!-- SECTION 6 -->
+    <section id="section6">
+        <div class="layout">
+            <h1>Happy Birthdaaay! 💚</h1>
+            <div class="letter">
+                <p>My Dearest,</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                <p>With all my love,</p>
+                <p>Someone Special</p>
+            </div>
+            <button class="next-btn">Next</button>
+        </div>
+    </section>
+
+    <!-- SECTION 7 -->
     <section id="section7">
-        <h2>Thank You!</h2>
-        <button id="rewatch-btn">Rewatch</button>
+        <div class="layout">
+            <h2>Thank You!</h2>
+            <button id="rewatch-btn">Rewatch</button>
+        </div>
     </section>
 
+    <!-- IMAGE LIGHTBOX -->
     <div class="image-lightbox" id="imageLightbox">
-      <span class="close-btn" id="closeLightbox">&times;</span>
-      <img id="lightboxImage" src="" alt="Expanded view">
+        <span class="close-btn" id="closeLightbox">&times;</span>
+        <img id="lightboxImage" src="" alt="Expanded view">
     </div>
 
     <script src="main.js"></script>
