--- a/index.html
+++ b/index.html
@@ -45,14 +45,11 @@
     <!-- SECTION 3 -->
     <section id="section3">
         <div class="layout">
-            <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-            </iframe>
+            <h1>My Personal Favorite 😋😣</h1>
+            <div class="image-grid image-grid-large">
+                <img src="assets/images/fav1.jpeg" alt="Image 1">
+                <img src="assets/images/fav2.jpeg" alt="Image 2">
+            </div>
             <button class="next-btn">Next</button>
         </div>
     </section>
@@ -86,12 +83,18 @@
     <section id="section6">
         <div class="layout">
             <h1>Happy Birthdaaay! 💚</h1>
+            <img src="assets/images/favgf.jpeg" alt="Image 2" class="letter-image">
             <div class="letter">
                 <p>My Dearest,</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-                <p>With all my love,</p>
-                <p>Someone Special</p>
+                <p>Happy birthday!</p>
+                <p>I really.. REALLY wish i could be there rn, but since i cant, this is all i can give you, <strong><em>for now.</em></strong></strong> And i hope you can feel how much i love you through this instead..</p>
+                <p>It still surprises me sometimes that weve been together for more than a yearr. So much calls, well, less texting cus we always be on the call.., arguing, and so much more. One thing that i missed tho.. the "<em>usual</em>" stuff that we do late nights hehe.</p>
+                <p>But actually tho, thank you so much for being patient with me, even tho i always be mad for every little things. But you still ended up forgave me for it. You really make my days better. Even when youre not there, js thinking about you actually makes me super happy for some reason.</p>
+                <p><em>And im.. really thankful for that.. Im so happy i can have you in my life..</em></p>
+                <p>I hope this year brings you soooo much happiness, good health, so many little stuff that can make you happy. And one day, i know ill get to celebrate your birthday right next to you <del><em>(preferably in bed :3)</em></del>, instead of through the screen</p>
+                <p>Until then, js know this, i love you so so SOOOOOOOOO damn much, <strong>and i always will.</strong></p>
+                <p>Happy birthday, maam.</p>
+                <p>Daddy Whiz 🥰</p>
             </div>
             <button class="next-btn">Next</button>
         </div>
