--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- BACKGROUND -->
     <div id="emoji-background"></div>
 
-    <!-- SECTION 1 -->
-    <section id="section1" class="active">
+    <section id="music-section" class="active">
+        <div class="layout">
+            <h1>Do you wanna activate music? 🎧</h1>
+            <div style="display:flex; gap:20px; margin-top:20px;">
+            <button id="music-yes-btn" class="next-btn">Yes</button>
+            <button id="music-no-btn" class="next-btn">No</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="section1">
         <div class="layout">
             <h1>HAAAAPPY BIRTHDAYYYY! 💚</h1>
             <img src="assets/images/cat1.jpg" alt="Circular Image" class="circular-image">
@@ -65,17 +72,18 @@
     <!-- SECTION 5 -->
     <section id="section5">
         <div class="layout">
-            <img src="assets/images/cat2.jpg" alt="Image before question" class="question-image">
-            <h2>Do you love me?</h2>
+            <img id="love-image" src="assets/images/cat2.jpg" class="question-image">
+            <h2 id="love-text">Do you love me?</h2>
             <button id="yes-btn">Yes</button>
             <button id="no-btn">No</button>
+
         </div>
     </section>
 
     <!-- NO SECTION -->
     <section id="section-no">
         <div class="layout">
-            <h2>awh.. lets try again..</h2>
+            <h2 id="no-text">awh.. lets try again..</h2>
         </div>
     </section>
 
@@ -113,6 +121,12 @@
         <span class="close-btn" id="closeLightbox">&times;</span>
         <img id="lightboxImage" src="" alt="Expanded view">
     </div>
+
+    <audio id="bg-music" loop preload="auto">
+         <source src="assets/audio/bg.mp3" type="audio/mpeg">
+    </audio>
+
+    <audio id="no-sound" preload="auto"></audio>
 
     <script src="main.js"></script>
 </body>
