Final Audio Adjustments and pics

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     <!-- SECTION 7 -->
     <section id="section7">
         <div class="layout">
-            <h2>Thank You!</h2>
-            <button id="rewatch-btn">Rewatch</button>
+            <h2>Im always here if you need me.. 💙</h2>
+            <button id="rewatch-btn">Watch again?</button>
         </div>
     </section>
 
